force-app/main/default/objects/Case__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>