force-app/main/default/objects/Case__e/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>